--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-buildscript {
+/*buildscript {
 	ext {
 		springBootVersion = '1.5.9.RELEASE'
 	}
@@ -28,3 +28,57 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+*/
+
+buildscript {
+	repositories {
+		jcenter () 
+	} 
+	dependencies {
+		classpath group : org.jfrog.buildinfo ' , name : 'build-info-extractor-gradle' , version : '4.0.0 ')
+	}
+}
+
+version=currentVersion
+
+apply plugin: 'com.jfrog.artifactory'
+apply plugin: 'java'
+apply plugin: 'maven-publish'
+
+dependencies {
+	testCompile 'junit:junit:4.7'
+}
+
+publishing { 
+	publications {
+		mavenJava(MavenPublication ) { 
+			from components.java
+		}
+	}
+}
+
+
+artifactory {
+	contextUrl = ' http://localhost:8082/artifactory'
+	publish { 
+		repository { 
+			repokey =  'hello-gradle' // The Artifactory repository key to publish to 
+			username = '$(artifactory_user)' " // The publisher user name 
+			password = '$(artifactory_password)' // The publisher password
+		} 
+		defaults { 
+			// Reference to Gradle publications defined in the build script
+			// This is how we tell the Artifactory Plugin which artifacts
+			// published to Artifactory . 
+			publications('mavenJava')
+			publishArtifacts = true // Properties to be attached to the published artifacts.
+			properties= [ 'qa.level' : 'basic' , 'dev.team ' : 'core' ] 
+			// Publish generated POM files to Artifactory ( true by default)
+			publishPom = true
+		}
+	}
+	resolve {
+		repKey='jcenter'
+	}
+}
+
