--- a/build.gradle
+++ b/build.gradle
@@ -28,17 +28,17 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
-*/
 
-//buildscript {
+
+buildscript {
 	repositories {
 		jcenter () 
 	} 
 	dependencies {
 		classpath(group : org.jfrog.buildinfo ' , name : 'build-info-extractor-gradle' , version : '4.0.0')
 	}
-//}
-
+}
+*/
 version=currentVersion
 
 apply plugin: 'com.jfrog.artifactory'
