--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ artifactory {
 	publish { 
 		repository { 
 			repokey =  'hello-gradle' // The Artifactory repository key to publish to 
-			username = '$(artifactory_user)' " // The publisher user name 
+			username = '$(artifactory_user)'  // The publisher user name 
 			password = '$(artifactory_password)' // The publisher password
 		} 
 		defaults { 
