--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ buildscript {
 	}
 }
 */
-version=currentVersion
+//version=currentVersion
 
 apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'java'
